# chi_PsiMM

./: .gitignore  CMakeLists.txt  FindEvtGen.cmake  FindHepMC.cmake  FindROOT.cmake
decfiles/: 3body_ee.dec  3body_mm.dec  chic_2body_old.dec  chic_3body_old.dec  my_combines.dec
python/: compare_root.ipynb
root_files/: read_data.C  run.sh
root_files2/: read_data.C
root_files2/hst/: hCos_chic0_3body_new.hst  hCos_chic0_3body_old.hst  hCos_chic1_3body_new.hst  hCos_chic1_3body_old.hst  hCos_chic2_3body_new.hst  hCos_chic2_3body_old.hst  hM_chic0_3body_new.hst  hM_chic1_3body_new.hst  hM_chic2_3body_old.hst  hQ2_chic0_3body_new.hst  hQ2_chic0_3body_old.hst  hQ2_chic1_3body_new.hst  hQ2_chic1_3body_old.hst  hQ2_chic2_3body_new.hst  hQ2_chic2_3body_old.hst  hm2K1KK1_chic2_3body_new.hst  hm2PsiK1_chic0_3body_new.hst  hm2PsiK1_chic0_3body_old.hst  hm2PsiK1_chic1_3body_new.hst  hm2PsiK1_chic1_3body_old.hst  hm2PsiK1_chic2_3body_new.hst  hm2PsiK1_chic2_3body_old.hst
src/: a.for  chiC_MM.cc  chic_2body_new.dec  chic_2body_old.dec  chic_3body_new.dec  chic_3body_old.dec  chic_all.cc  chic_matr2.dec  evt.pdl  my.dec  my_77.dec  my_combines.dec  my_ee.dec  my_max.dec  my_old.dec  read_data.cc  test.cc
src/EvtGenModels/: EvtSVP_.hh  EvtSVP_mm.hh  EvtTVP_.hh  EvtTVP_mm.hh  EvtVVP_.hh  EvtVVP_mm.hh
src/MMSh/: MMSh.c++  kinematics.c++  kinematics.h  matr2.c++  matr2.h
src/MMSh/ramC/: ramC.c++  ramC.h  test.c++
src/matr2_pol/: gen_pol.cc
src/src/EvtGenModels/: EvtModelReg.cpp  EvtSVP_.cpp  EvtSVP_mm.cpp  EvtTVP_.cpp  EvtTVP_mm.cpp  EvtVVP_.cpp  EvtVVP_mm.cpp
test_hst/: run_test.sh
